--- a/Jungle-Academy/portfolio2/css/ware-valley.css
+++ b/Jungle-Academy/portfolio2/css/ware-valley.css
@@ -34,19 +34,19 @@ body {
   font: 15px/1.6 'Noto Sans KR';
 }
 
-header#mainHeader {
+header#main-header {
   position: relative;
   width: 100%;
   height: 840px;
   background: url(../img/main_img2.png) no-repeat center/cover;
 }
 
-header#mainHeader nav#mainNav {
+header#main-header nav#main-nav, header#main-header nav#hidden-nav {
   height: 120px;
   background: rgba(0, 0, 0, 0.6);
 }
 
-header#mainHeader nav#mainNav div#innerNav {
+header#main-header nav#main-nav div.inner-nav, header#main-header nav#hidden-nav div.inner-nav {
   position: relative;
   max-width: calc(100% - 40px);
   width: 1200px;
@@ -55,11 +55,24 @@ header#mainHeader nav#mainNav div#innerNav {
   margin: 0 auto;
 }
 
-div#innerNav h1.logo {
+header#main-header nav#main-nav {
+  display: none;
+}
+
+@media all and (max-width: 768px) {
+  header#main-header {
+    height: 400px;
+  }
+  header#main-header nav#mainNav {
+    height: 50px;
+  }
+}
+
+div.inner-nav h1.logo {
   height: 100%;
 }
 
-div#innerNav h1.logo a {
+div.inner-nav h1.logo a {
   position: absolute;
   vertical-align: middle;
   top: 50%;
@@ -70,13 +83,23 @@ div#innerNav h1.logo a {
   line-height: 0.9;
 }
 
-div#innerNav h1.logo a span {
+div.inner-nav h1.logo a span {
   display: block;
   padding-left: 30px;
   font-size: 30px;
 }
 
-div#innerNav > nav.gnb {
+@media all and (max-width: 768px) {
+  div.inner-nav h1.logo a {
+    font-size: 14px;
+  }
+  div.inner-nav h1.logo a span {
+    font-size: 13px;
+    padding-left: 10px;
+  }
+}
+
+div.inner-nav > nav.gnb {
   position: absolute;
   top: 58px;
   right: 80px;
@@ -85,26 +108,26 @@ div#innerNav > nav.gnb {
   z-index: 999;
 }
 
-div#innerNav > nav.gnb > ul.gnb-menu {
+div.inner-nav > nav.gnb > ul.gnb-menu {
   overflow: hidden;
 }
 
-div#innerNav > nav.gnb > ul.gnb-menu > li.menus {
+div.inner-nav > nav.gnb > ul.gnb-menu > li.menus {
   width: 25%;
   float: left;
   text-align: center;
 }
 
-div#innerNav > nav.gnb > ul.gnb-menu > li.menus:hover > ul.sub-menus {
+div.inner-nav > nav.gnb > ul.gnb-menu > li.menus:hover > ul.sub-menus {
   height: calc(100% + 0px);
   padding: 15px 30px;
 }
 
-div#innerNav > nav.gnb > ul.gnb-menu > li.menus:hover > ul.sub-menus > li {
+div.inner-nav > nav.gnb > ul.gnb-menu > li.menus:hover > ul.sub-menus > li {
   height: 45px;
 }
 
-div#innerNav > nav.gnb > ul.gnb-menu > li.menus > a.menus-a {
+div.inner-nav > nav.gnb > ul.gnb-menu > li.menus > a.menus-a {
   display: block;
   color: #fff;
   font-size: 14px;
@@ -112,7 +135,7 @@ div#innerNav > nav.gnb > ul.gnb-menu > li.menus > a.menus-a {
   padding: 20px 40px;
 }
 
-div#innerNav > nav.gnb > ul.gnb-menu > li.menus > ul.sub-menus {
+div.inner-nav > nav.gnb > ul.gnb-menu > li.menus > ul.sub-menus {
   position: relative;
   height: 0px;
   overflow: hidden;
@@ -122,21 +145,27 @@ div#innerNav > nav.gnb > ul.gnb-menu > li.menus > ul.sub-menus {
   padding: 0px 30px;
 }
 
-div#innerNav > nav.gnb > ul.gnb-menu > li.menus > ul.sub-menus > li {
+div.inner-nav > nav.gnb > ul.gnb-menu > li.menus > ul.sub-menus > li {
   height: 0px;
   text-align: left;
   -webkit-transition: all .2s;
   transition: all .2s;
 }
 
-div#innerNav > nav.gnb > ul.gnb-menu > li.menus > ul.sub-menus > li > a {
+div.inner-nav > nav.gnb > ul.gnb-menu > li.menus > ul.sub-menus > li > a {
   color: #898989;
   font-size: 12px;
   text-transform: capitalize;
   line-height: 45px;
 }
 
-div#innerNav a.menu {
+@media all and (max-width: 768px) {
+  div.inner-nav > nav.gnb > ul.gnb-menu {
+    display: none;
+  }
+}
+
+div.inner-nav a.menu {
   position: absolute;
   bottom: 15px;
   right: 0;
@@ -145,25 +174,25 @@ div#innerNav a.menu {
   transition: all .3s;
 }
 
-div#innerNav a.menu:hover .item:nth-child(1) {
+div.inner-nav a.menu:hover .item:nth-child(1) {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   -webkit-transform-origin: 2px;
           transform-origin: 2px;
 }
 
-div#innerNav a.menu:hover .item:nth-child(2) {
+div.inner-nav a.menu:hover .item:nth-child(2) {
   opacity: 0;
 }
 
-div#innerNav a.menu:hover .item:nth-child(3) {
+div.inner-nav a.menu:hover .item:nth-child(3) {
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
   -webkit-transform-origin: 2px;
           transform-origin: 2px;
 }
 
-div#innerNav a.menu span.item {
+div.inner-nav a.menu span.item {
   background: #fff;
   display: block;
   width: 40px;
@@ -173,29 +202,115 @@ div#innerNav a.menu span.item {
   transition: all .3s;
 }
 
-div#innerNav nav.tnb {
+@media all and (max-width: 768px) {
+  div.inner-nav a.menu span.item {
+    width: 20px;
+    height: 1px;
+    margin: 0 0 5px;
+  }
+}
+
+div.inner-nav nav.tnb {
   position: absolute;
   top: 0;
   right: 0;
 }
 
-div#innerNav nav.tnb a {
+div.inner-nav nav.tnb a {
   color: rgba(255, 255, 255, 0.7);
   padding: 5px 15px;
   margin-right: 10px;
   font-size: 12px;
 }
 
-header#mainHeader > div.mainTitle {
+@media all and (max-width: 768px) {
+  div.inner-nav nav.tnb {
+    display: none;
+  }
+}
+
+header#main-header nav#hidden-nav {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
+header#main-header nav#hidden-nav div.inner-nav {
+  background: red;
+  position: relative;
+  max-width: calc(100% - 40px);
+  width: 1200px;
+  height: 100%;
+  color: #fff;
+  margin: 0 auto;
+}
+
+header#main-header nav#hidden-nav div.inner-nav h1.logo {
+  height: 100%;
+}
+
+header#main-header nav#hidden-nav div.inner-nav h1.logo a {
+  color: #949592;
+}
+
+header#main-header nav#hidden-nav div.gnb-wrap {
+  width: 100%;
+  height: 100%;
+  background-color: #F5F6F8;
+}
+
+header#main-header nav#hidden-nav div.gnb-wrap nav.gnb {
+  width: 1000px;
+  max-width: calc(100% - 40px);
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+header#main-header nav#hidden-nav div.gnb-wrap nav.gnb a {
+  text-transform: capitalize;
+  display: block;
+}
+
+header#main-header nav#hidden-nav div.gnb-wrap nav.gnb ul.gnb-menu {
+  padding-top: 10px;
+}
+
+header#main-header nav#hidden-nav div.gnb-wrap nav.gnb ul.gnb-menu li.menus {
+  width: 25%;
+  float: left;
+  text-align: center;
+}
+
+header#main-header nav#hidden-nav div.gnb-wrap nav.gnb ul.gnb-menu li.menus a.menus-a {
+  padding: 45px 0;
+  color: black;
+  font-weight: bold;
+  font-size: 30px;
+}
+
+header#main-header nav#hidden-nav div.gnb-wrap nav.gnb ul.gnb-menu li.menus ul.sub-menus li {
+  list-style-type: circle;
+  height: 45px;
+}
+
+header#main-header nav#hidden-nav div.gnb-wrap nav.gnb ul.gnb-menu li.menus ul.sub-menus li a {
+  color: #646464;
+  font-size: 22px;
+}
+
+header#main-header > div.mainTitle {
   position: absolute;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   line-height: 1.3;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
-header#mainHeader > div.mainTitle h1 {
+header#main-header > div.mainTitle h1 {
   font-size: 50px;
   text-align: center;
   color: #fff;
@@ -204,7 +319,7 @@ header#mainHeader > div.mainTitle h1 {
   text-shadow: -2px 2px 5px rgba(0, 0, 0, 0.6);
 }
 
-header#mainHeader > div.mainTitle span {
+header#main-header > div.mainTitle span {
   display: block;
   font-size: 30px;
   font-weight: lighter;
@@ -212,6 +327,18 @@ header#mainHeader > div.mainTitle span {
   margin-left: 4px;
   text-transform: uppercase;
   text-shadow: -2px 2px 5px rgba(145, 144, 144, 0.6);
+}
+
+@media all and (max-width: 768px) {
+  header#main-header > div.mainTitle {
+    line-height: 2;
+  }
+  header#main-header > div.mainTitle h1 {
+    font-size: 30px;
+  }
+  header#main-header > div.mainTitle span {
+    font-size: 20px;
+  }
 }
 
 section {
@@ -281,6 +408,12 @@ section#product article ul li a:hover {
   color: #fff;
 }
 
+@media all and (max-width: 768px) {
+  section#product article ul li p {
+    display: none;
+  }
+}
+
 section#product article li.cyclone {
   background: url(../img/ico1.png) center top no-repeat/200px 200px;
 }
@@ -345,15 +478,30 @@ section#boardList div ul.utill-wrap li p {
   padding-top: 20px;
 }
 
-@media all and (min-width: 768px) {
+@media all and (max-width: 768px) {
+  section#boardList div ul.utill-wrap {
+    display: block;
+    width: 100%;
+  }
   section#boardList div ul.utill-wrap li {
-    border: 1px solid red;
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+    padding: 15px 20px;
+  }
+  section#boardList div ul.utill-wrap li h3 {
+    font-size: 15px;
+  }
+  section#boardList div ul.utill-wrap li p {
+    font-size: 14px;
+  }
+  section#boardList div ul.utill-wrap li p br {
+    display: none;
   }
 }
 
 section#boardList div div.left, section#boardList div div.right {
   width: 45%;
-  height: 220px;
 }
 
 section#boardList div div.left h3, section#boardList div div.right h3 {
@@ -381,7 +529,7 @@ section#boardList div div.left ul li, section#boardList div div.right ul li {
 
 section#boardList div div.left ul li a, section#boardList div div.right ul li a {
   font-size: 18px;
-  color: #929292;
+  color: #646464;
 }
 
 section#boardList div div.left {
@@ -392,6 +540,21 @@ section#boardList div div.left {
 section#boardList div div.right {
   float: right;
   margin-right: 30px;
+}
+
+@media all and (max-width: 768px) {
+  section#boardList div div.left, section#boardList div div.right {
+    float: none;
+    max-width: 100%;
+    width: 100%;
+    margin: 0;
+  }
+  section#boardList div div.left ul li, section#boardList div div.right ul li {
+    padding: 10px;
+  }
+  section#boardList div div.left ul li a, section#boardList div div.right ul li a {
+    font-size: 15px;
+  }
 }
 
 section#aboutus h2 {
